# guardrails-regex-detector

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-push-guardrails-gateway.yaml
.tekton/: fms-guardrails-regex-detector-v2-20-pull-request.yaml  fms-guardrails-regex-detector-v2-20-push.yaml  fms-guardrails-regex-detector-v2-21-push.yaml
src/: detectors.rs  main.rs
