[package]
name = "local-detectors"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "local-detectors"
path = "src/main.rs"
